--- a/assets/styles.css
+++ b/assets/styles.css
@@ -58,7 +58,7 @@ nav ul li a.active {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('hero-image.jpg') no-repeat center center/cover;
     color: #fff;
     text-align: center;
-    padding: 3rem 0; /* Reducido para hacer la sección más compacta */
+    padding: 3rem 0;
 }
 
 .hero-content {
@@ -68,48 +68,13 @@ nav ul li a.active {
 }
 
 .hero h1 {
-    font-size: 2rem; /* Tamaño más pequeño para el título */
-    margin-bottom: 0.5rem; /* Menos espacio debajo */
+    font-size: 2rem;
+    margin-bottom: 0.5rem;
 }
 
 .hero p {
-    font-size: 1rem; /* Tamaño más pequeño para el párrafo */
-    margin-bottom: 1rem; /* Menos espacio debajo */
-}
-
-.btn {
-    background-color: #3498db;
-    color: #fff;
-    padding: 0.75rem 1.5rem;
-    text-decoration: none;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
-
-.btn:hover {
-    background-color: #2980b9;
-}
-
-/* Pestañas de Categoría */
-.category-tabs {
-    display: flex;
-    justify-content: center;
-    margin: 2rem 0;
-}
-
-.category-tab {
-    background-color: #ddd;
-    border: none;
-    padding: 0.75rem 1.5rem;
-    margin: 0 0.5rem;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-.category-tab.active,
-.category-tab:hover {
-    background-color: #3498db;
-    color: #fff;
+    font-size: 1rem;
+    margin-bottom: 1rem;
 }
 
 /* Cuadrícula de Noticias */
@@ -284,12 +249,16 @@ footer {
         margin-top: 1rem;
     }
 
+    .hero {
+        padding: 2rem 0;
+    }
+
     .hero h1 {
-        font-size: 2rem;
+        font-size: 1.5rem;
     }
 
     .hero p {
-        font-size: 1rem;
+        font-size: 0.9rem;
     }
 
     .news-grid {
